Learned UI Automator basics with camera test